--- a/src/css/classifylist.css
+++ b/src/css/classifylist.css
@@ -11,7 +11,7 @@
   color: #999;
   font-size: 14px;
 }
-.header p .vr-type {
+.header p .vr-name {
   color: #FFCC00;
 }
 .header p span {
@@ -78,58 +78,58 @@
   display: inline-block;
   margin-left: 5px;
 }
-.pagination .page-total {
-  display: inline-block;
+.page-box {
+  text-align: center;
+  font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight: 700;
+  font-style: normal;
+  color: #999;
+  font-size: 14px;
 }
-.pagination .page-total a {
-  position: relative;
-  float: left;
+.page-box .page-detail {
+  display: inline-block;
   border: 1px solid #ddd;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  padding: 6px 12px;
-  cursor: none;
-  text-decoration: none;
-  color: #999;
+  padding: 0 20px;
+  line-height: 28px;
+  vertical-align: top;
+  margin-right: 30px;
 }
-.pagination .page-total a span:nth-child(1) {
+.page-box .page-detail .total-num {
+  display: inline-block;
+  margin-left: 10px;
+}
+.page-box .vr-pagination {
+  width: auto !important;
   display: inline-block;
 }
-.pagination li {
-  display: inline-block;
+.page-box .vr-pagination .spFirst {
+  padding: 0 5px;
+}
+.page-box .vr-pagination .spPrev {
+  width: auto;
+  font-size: 12px;
+  margin-left: 10px;
+  padding: 0 5px;
+}
+.page-box .vr-pagination .spNext {
+  width: auto;
+  font-size: 12px;
+  margin-right: 10px;
+  padding: 0 5px;
+}
+.page-box .vr-pagination .spLast {
+  padding: 0 5px;
+}
+.page-box .vr-pagination .spActiveBg {
+  display: none;
+}
+.page-box .vr-pagination .active {
+  background: #367fa9;
+  color: #fff;
+}
+.page-box .vr-pagination ul {
+  padding: 0;
+}
+.page-box .vr-pagination ul li {
   margin: 0 10px;
-}
-.pagination li a {
-  color: #999;
-  cursor: pointer;
-}
-.pagination li a:hover {
-  color: #999;
-  background: #66ccff;
-}
-.pagination li .active {
-  background: #66ccff;
-}
-.pagination .pagination-num {
-  padding-left: 0;
-}
-.pagination .pagination-num li {
-  display: inline-block;
-  margin: 0 10px;
-}
-.pagination .pagination-num li a {
-  position: relative;
-  float: left;
-  border: 1px solid #ddd;
-  padding: 6px 12px;
-  cursor: pointer;
-  text-decoration: none;
-  color: #999;
-}
-.pagination .pagination-num li a:hover {
-  color: #999;
-  background: #66ccff;
-}
-.pagination .pagination-num li .active {
-  background: #66ccff;
 }
