--- a/src/css/index.less
+++ b/src/css/index.less
@@ -196,6 +196,7 @@
         border-radius: 10px;
         transition: .2s linear;
         padding: 0 5px;
+        background: #fff;
         p {
             font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
             font-weight: 700;
