--- a/src/css/login.less
+++ b/src/css/login.less
@@ -1,20 +1,15 @@
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0px 1000px #fff inset;
+}
+
 .login-section {
-    width: 488px;
-    height: 397px;
-    margin: 50px 0 50px 675px;
-    position: relative;
-    background: transparent;
-    .login-bg {
-        position: absolute;
-        width: 100%;
-        left: 0;
-        top: 0;
-    }
+    width: 359px;
+    height: 273px;
+    margin: 250px 0 0 800px;
     .content {
-        position: absolute;
-        top: 15px;
-        left: 50px;
-        right: 50px;
+        padding: 15px 25px;
+        border-radius: 20px;
+        background: #fff;
         a {
             color: #999;
         }
@@ -26,7 +21,7 @@
         input {
             outline: none;
             border: none;
-            width: 88%;
+            width: 85%;
             color: #999;
             vertical-align: top;
             line-height: 31px;
@@ -39,18 +34,10 @@
             padding: 6.5px 5px;
         }
         .line-one {
-            height: 65px;
             overflow: auto;
-            .logo {
-                display: inline-block;
-                width: 123px;
-                height: 62px;
-                float: left;
-            }
             a {
                 display: inline-block;
                 vertical-align: top;
-                margin-top: 25px;
             }
             .cannot-login {
                 margin-left: 40px;
@@ -61,11 +48,10 @@
                 display: inline-block;
                 text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.64);
                 margin-right: 10px;
-                margin-top: 23px;
             }
         }
         .line-two {
-            margin-top: 20px;
+            margin-top: 10px;
             .logo {
                 display: inline-block;
                 width: 30px;
@@ -74,7 +60,7 @@
         }
         .line-three {
             height: 48px;
-            margin-top: 40px;
+            margin-top: 10px;
             .logo {
                 display: inline-block;
                 width: 30px;
@@ -107,4 +93,14 @@
             }
         }
     }
+}
+
+.login {
+    height: 630px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.foot {
+    margin-top: 40px;
 }
