--- a/src/css/index.css
+++ b/src/css/index.css
@@ -192,6 +192,7 @@
   border-radius: 10px;
   transition: .2s linear;
   padding: 0 5px;
+  background: #fff;
 }
 .nav-contact .online-box-detail p {
   font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
