--- a/src/css/rankingList.less
+++ b/src/css/rankingList.less
@@ -3,6 +3,7 @@
     .ranking {
         background: #FAFAFA;
         padding-bottom: 10px;
+        min-height: 680px;
         .title-box {
             margin-bottom: 10px;
             span {
