--- a/src/css/rankingList.css
+++ b/src/css/rankingList.css
@@ -4,6 +4,7 @@
 .content .ranking {
   background: #FAFAFA;
   padding-bottom: 10px;
+  min-height: 680px;
 }
 .content .ranking .title-box {
   margin-bottom: 10px;
