--- a/src/css/classifylist.less
+++ b/src/css/classifylist.less
@@ -44,7 +44,7 @@
             background: #fff;
             cursor: pointer;
             .product-img {
-                width: 100%;
+                width: 232px;
                 min-height: 175px;
             }
             .product-img:hover {
@@ -79,6 +79,11 @@
                 }
             }
         }
+    }
+    .noData {
+        display: none;
+        padding-bottom: 20px;
+        color: red
     }
 }
 
