--- a/src/css/vrproduct.less
+++ b/src/css/vrproduct.less
@@ -12,6 +12,7 @@
     .detail {
         .video-box {
             display: inline-block;
+            min-width: 700px;
             max-width: 793px;
             min-height: 400px;
             .video-number {
