--- a/src/css/classifylist.css
+++ b/src/css/classifylist.css
@@ -44,7 +44,7 @@
   cursor: pointer;
 }
 .content .vr-list .vr-box .product-img {
-  width: 100%;
+  width: 232px;
   min-height: 175px;
 }
 .content .vr-list .vr-box .product-img:hover {
@@ -77,6 +77,11 @@
 .content .vr-list .vr-box .hot-num span {
   display: inline-block;
   margin-left: 5px;
+}
+.content .noData {
+  display: none;
+  padding-bottom: 20px;
+  color: red;
 }
 .page-box {
   text-align: center;
