--- a/src/css/searchList.less
+++ b/src/css/searchList.less
@@ -10,13 +10,13 @@
             background: #fff;
             cursor: pointer;
             .product-img {
-                width: 100%;
+                width: 232px;
                 min-height: 175px;
             }
             .product-img:hover {
                 border-right: 4px solid #fff;
                 border-bottom: 4px solid #fff;
-                box-shadow: 4px 4px 4px #888888;
+                box-shadow: 4px 4px 4px #888;
             }
             .name {
                 margin: 5px 0 5px 5px;
