--- a/src/css/vrModel.css
+++ b/src/css/vrModel.css
@@ -107,6 +107,7 @@
   border-left: 1px solid #00ccff;
 }
 .content .detail .img-detail .img-box img {
+  display: block;
   width: 70%;
   margin: 15px 15%;
 }
