--- a/src/css/vrModel.less
+++ b/src/css/vrModel.less
@@ -103,6 +103,7 @@
                 border-right: 1px solid #00ccff;
                 border-left: 1px solid #00ccff;
                 img {
+                    display: block;
                     width: 70%;
                     margin: 15px 15%;
                 }
