--- a/src/css/classifylist.css
+++ b/src/css/classifylist.css
@@ -32,7 +32,7 @@
 .content {
   background: #fafafa;
   margin: 30px 62px;
-  width: 1136px;
+  width: 1106px;
 }
 .content .vr-list {
   padding: 10px 0;
@@ -45,7 +45,8 @@
 }
 .content .vr-list .vr-box .product-img {
   width: 232px;
-  min-height: 175px;
+  height: 175px;
+  overflow: hidden;
 }
 .content .vr-list .vr-box .product-img:hover {
   border-right: 4px solid #fff;
