--- a/src/css/classifylist.less
+++ b/src/css/classifylist.less
@@ -35,7 +35,7 @@
 .content {
     background: #fafafa;
     margin: 30px 62px;
-    width: 1136px;
+    width: 1106px;
     .vr-list {
         padding: 10px 0;
         .vr-box {
@@ -45,7 +45,8 @@
             cursor: pointer;
             .product-img {
                 width: 232px;
-                min-height: 175px;
+                height: 175px;
+                overflow: hidden;
             }
             .product-img:hover {
                 border-right: 4px solid #fff;
