--- a/src/css/vrModel.less
+++ b/src/css/vrModel.less
@@ -55,6 +55,12 @@
                                 color: #FF0000;
                             }
                         }
+                        .add-collection {
+                            cursor: pointer;
+                        }
+                        .add-praise {
+                            cursor: pointer;
+                        }
                     }
                 }
             }
