--- a/src/css/rankingList.less
+++ b/src/css/rankingList.less
@@ -22,7 +22,8 @@
             cursor: pointer;
             .product-img {
                 width: 232px;
-                min-height: 175px;
+                height: 175px;
+                overflow: hidden;
             }
             .product-img:hover {
                 border-right: 4px solid #fff;
