--- a/src/css/searchList.css
+++ b/src/css/searchList.css
@@ -14,7 +14,8 @@
 }
 .content .vr-list .vr-box .product-img {
   width: 232px;
-  min-height: 175px;
+  height: 175px;
+  overflow: hidden;
 }
 .content .vr-list .vr-box .product-img:hover {
   border-right: 4px solid #fff;
@@ -46,6 +47,10 @@
 .content .vr-list .vr-box .hot-num span {
   display: inline-block;
   margin-left: 5px;
+}
+.content .noData {
+  color: red;
+  display: none;
 }
 .page-box {
   text-align: center;
