--- a/src/css/searchList.less
+++ b/src/css/searchList.less
@@ -11,7 +11,8 @@
             cursor: pointer;
             .product-img {
                 width: 232px;
-                min-height: 175px;
+                height: 175px;
+                overflow: hidden;
             }
             .product-img:hover {
                 border-right: 4px solid #fff;
@@ -45,6 +46,10 @@
                 }
             }
         }
+    }
+    .noData {
+        color: red;
+        display: none;
     }
 }
 
