--- a/src/css/vrModel.css
+++ b/src/css/vrModel.css
@@ -61,6 +61,12 @@
   font-size: 20px;
   color: #FF0000;
 }
+.content .detail .model-detail .contact-way ul li .add-collection {
+  cursor: pointer;
+}
+.content .detail .model-detail .contact-way ul li .add-praise {
+  cursor: pointer;
+}
 .content .detail .text-detail {
   width: 100%;
 }
