--- a/src/css/vrproduct.less
+++ b/src/css/vrproduct.less
@@ -25,6 +25,15 @@
                 ul {
                     li {
                         margin-right: 30px;
+                        .add-collection {
+                            cursor: pointer;
+                        }
+                        .add-praise {
+                            cursor: pointer;
+                        }
+                    }
+                    li:nth-child(3) {
+                        margin-right: 10px;
                     }
                     li:nth-child(4) {
                         margin-right: 0;
