--- a/src/css/index.less
+++ b/src/css/index.less
@@ -5,7 +5,6 @@
         padding-left: 11px;
         .logo {
             width: 123px;
-            height: 62px;
             vertical-align: top;
         }
         .search-box {
@@ -55,11 +54,11 @@
             }
         }
         .member-box {
+            float: right;
+            margin-right: 20px;
             display: inline-block;
-            min-width: 405px;
             text-align: right;
             vertical-align: top;
-            padding-left: 130px;
             margin-top: 15px;
             span {
                 font-family: '黑体 Bold', '黑体 Regular', '黑体';
