--- a/src/css/devIndex.css
+++ b/src/css/devIndex.css
@@ -1,11 +1,9 @@
 .document .header {
   width: 100%;
-  height: 75px;
   padding-left: 11px;
 }
 .document .header .logo {
   width: 123px;
-  height: 62px;
   vertical-align: top;
 }
 .document .header .search-box {
@@ -55,11 +53,11 @@
   color: #0099FF;
 }
 .document .header .member-box {
+  float: right;
+  margin-right: 20px;
   display: inline-block;
-  min-width: 405px;
   text-align: right;
   vertical-align: top;
-  padding-left: 15px;
   margin-top: 15px;
 }
 .document .header .member-box span {
