--- a/src/css/devIndex.less
+++ b/src/css/devIndex.less
@@ -1,11 +1,9 @@
 .document {
     .header {
         width: 100%;
-        height: 75px;
         padding-left: 11px;
         .logo {
             width: 123px;
-            height: 62px;
             vertical-align: top;
         }
         .search-box {
@@ -55,11 +53,11 @@
             }
         }
         .member-box {
+            float: right;
+            margin-right: 20px;
             display: inline-block;
-            min-width: 405px;
             text-align: right;
             vertical-align: top;
-            padding-left: 15px;
             margin-top: 15px;
             span {
                 font-family: '黑体 Bold', '黑体 Regular', '黑体';
