--- a/src/css/vrproduct.css
+++ b/src/css/vrproduct.css
@@ -23,7 +23,7 @@
   color: #999;
 }
 .content .detail .video-box .video-number ul li {
-  margin-right: 30px;
+  margin-right: 15px;
 }
 .content .detail .video-box .video-number ul li .add-collection {
   cursor: pointer;
@@ -52,6 +52,7 @@
   border-radius: 10px;
   height: 45px;
   background: linear-gradient(180deg, #ffffff 0%, #ffffff 0%, #00ccff 100%, #00ccff 100%);
+  outline: none;
 }
 .content .detail .video-detail .download-btn span {
   font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
