--- a/src/css/vrproduct.less
+++ b/src/css/vrproduct.less
@@ -24,7 +24,7 @@
                 }
                 ul {
                     li {
-                        margin-right: 30px;
+                        margin-right: 15px;
                         .add-collection {
                             cursor: pointer;
                         }
@@ -55,6 +55,7 @@
                 border-radius: 10px;
                 height: 45px;
                 background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(0, 204, 255, 1) 100%, rgba(0, 204, 255, 1) 100%);
+                outline: none;
                 span {
                     font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
                     font-weight: 700;
