--- a/src/css/vrModel.less
+++ b/src/css/vrModel.less
@@ -15,6 +15,7 @@
             display: inline-block;
             width: 588px;
             min-height: 400px;
+            overflow: hidden;
         }
         .model-detail {
             display: inline-block;
@@ -80,6 +81,7 @@
                 font-size: 20px;
                 color: #666666;
                 text-align: left;
+                padding: 10px;
             }
             p {
                 padding: 10px 30px 50px 30px;
@@ -104,6 +106,7 @@
                 font-size: 20px;
                 color: #666666;
                 text-align: left;
+                padding: 10px;
             }
             .img-box {
                 border-right: 1px solid #00ccff;
