--- a/src/css/index.css
+++ b/src/css/index.css
@@ -86,6 +86,7 @@
 .document .header .member-box .line-one {
   min-width: 100px;
   height: 21px;
+  display: none;
 }
 .document .header .member-box .line-two {
   margin-top: 10px;
