--- a/src/css/index.less
+++ b/src/css/index.less
@@ -85,6 +85,7 @@
             .line-one {
                 min-width: 100px;
                 height: 21px;
+                display: none;
             }
             .line-two {
                 margin-top: 10px;
