--- a/src/css/memberCenterList.css
+++ b/src/css/memberCenterList.css
@@ -1,6 +1,11 @@
 .content {
   width: 100%;
   overflow-x: hidden;
+  padding-left: 30px;
+}
+.content .title {
+  color: #0099FF;
+  font-size: 16px;
 }
 .content .vr-list {
   padding: 10px 0;
@@ -13,7 +18,7 @@
   padding-bottom: 5px;
 }
 .content .vr-list .vr-box .product-img {
-  width: 232px;
+  width: 100%;
   min-height: 175px;
 }
 .content .vr-list .vr-box .product-img:hover {
@@ -22,6 +27,7 @@
   box-shadow: 4px 4px 4px #888;
 }
 .content .vr-list .vr-box .name {
+  width: 100%;
   margin: 5px 0 5px 5px;
   font-weight: 700;
   font-style: normal;
@@ -30,15 +36,17 @@
   display: inline-block;
   vertical-align: middle;
 }
-.content .vr-list .vr-box .id-box {
+.content .vr-list .vr-box .name .id-box {
+  float: right;
+  margin-right: 10px;
+}
+.content .vr-list .vr-box .btn-box {
   display: inline-block;
   font-size: 12px;
   color: #999;
-  margin: 5px 0 0 60px;
-}
-.content .vr-list .vr-box .id-box span {
-  display: inline-block;
-  margin-left: 5px;
+  width: 100%;
+  text-align: right;
+  margin: 0;
 }
 .content .vr-list .vr-box button {
   outline: none;
