--- a/src/css/memberCenterList.less
+++ b/src/css/memberCenterList.less
@@ -1,6 +1,11 @@
 .content {
     width: 100%;
     overflow-x: hidden;
+    padding-left: 30px;
+    .title {
+        color: #0099FF;
+        font-size: 16px;
+    }
     .vr-list {
         padding: 10px 0;
         .vr-box {
@@ -10,7 +15,7 @@
             cursor: pointer;
             padding-bottom: 5px;
             .product-img {
-                width: 232px;
+                width: 100%;
                 min-height: 175px;
             }
             .product-img:hover {
@@ -19,6 +24,7 @@
                 box-shadow: 4px 4px 4px #888;
             }
             .name {
+                width: 100%;
                 margin: 5px 0 5px 5px;
                 font-weight: 700;
                 font-style: normal;
@@ -26,16 +32,18 @@
                 color: #999;
                 display: inline-block;
                 vertical-align: middle;
+                .id-box {
+                    float: right;
+                    margin-right: 10px;
+                }
             }
-            .id-box {
+            .btn-box {
                 display: inline-block;
                 font-size: 12px;
                 color: #999;
-                margin: 5px 0 0 60px;
-                span {
-                    display: inline-block;
-                    margin-left: 5px;
-                }
+                width: 100%;
+                text-align: right;
+                margin: 0;
             }
             button {
                 outline: none;
