--- a/src/css/vrModel.css
+++ b/src/css/vrModel.css
@@ -19,6 +19,9 @@
   min-height: 400px;
   overflow: hidden;
 }
+.content .detail .model-box .home-img {
+  width: 100%;
+}
 .content .detail .model-detail {
   display: inline-block;
   vertical-align: top;
