--- a/src/css/vrModel.less
+++ b/src/css/vrModel.less
@@ -16,6 +16,9 @@
             width: 588px;
             min-height: 400px;
             overflow: hidden;
+            .home-img {
+                width: 100%;
+            }
         }
         .model-detail {
             display: inline-block;
