add modify password

--- a/src/css/memberCenter.css
+++ b/src/css/memberCenter.css
@@ -5,7 +5,7 @@
   margin: 0;
 }
 .member-box .member-header {
-  width: 1318px;
+  width: 1518px;
   height: 72px;
   background: linear-gradient(180deg, #0099ff 0%, #0099ff 0%, #0099ff 45%, #ffffff 100%, #ffffff 100%);
 }
@@ -27,7 +27,10 @@
 .member-box .member-header .to-index {
   float: right;
   margin-right: 20px;
-  margin-top: 30px;
+  margin-top: 15px;
+}
+.member-box .member-header span {
+  color: #FFCC33;
 }
 .member-box .member-header a {
   color: #FFCC33;
@@ -64,7 +67,7 @@
 }
 .member-box .content iframe {
   display: inline-block;
-  width: 1150px;
+  width: 1350px;
   min-height: 900px;
   border-radius: 20px;
   padding: 0 20px;
