--- a/src/css/memberCenter.less
+++ b/src/css/memberCenter.less
@@ -4,7 +4,7 @@
         margin: 0;
     }
     .member-header {
-        width: 1318px;
+        width: 1518px;
         height: 72px;
         background: linear-gradient(180deg, rgba(0, 153, 255, 1) 0%, rgba(0, 153, 255, 1) 0%, rgba(0, 153, 255, 1) 45%, rgba(255, 255, 255, 1) 100%, rgba(255, 255, 255, 1) 100%);
         .logo {
@@ -25,7 +25,10 @@
         .to-index {
             float: right;
             margin-right: 20px;
-            margin-top: 30px;
+            margin-top: 15px;
+        }
+        span {
+            color: #FFCC33;
         }
         a {
             color: #FFCC33;
@@ -62,7 +65,7 @@
         }
         iframe {
             display: inline-block;
-            width: 1150px;
+            width: 1350px;
             min-height: 900px;
             border-radius: 20px;
             padding: 0 20px;
