--- a/src/css/memberCenterList.less
+++ b/src/css/memberCenterList.less
@@ -19,8 +19,8 @@
                 min-height: 175px;
             }
             .product-img:hover {
-                border-right: 4px solid #fff;
-                border-bottom: 4px solid #fff;
+                // border-right: 4px solid #fff;
+                // border-bottom: 4px solid #fff;
                 box-shadow: 4px 4px 4px #888;
             }
             .name {
