--- a/src/css/vrpublish.less
+++ b/src/css/vrpublish.less
@@ -80,6 +80,37 @@
             .img-list {
                 min-height: 100px;
                 padding-left: 107px;
+                ul {
+                    li {
+                        margin: 10px 0;
+                        span {
+                            display: inline-block;
+                            margin-right: 50px;
+                        }
+                        .group {
+                            height: 16px;
+                            vertical-align: middle;
+                            cursor: pointer;
+                        }
+                        .btn {
+                            margin-left: 50px;
+                            width: 60px;
+                            height: 30px;
+                            border: 1px solid #00ccff;
+                            background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(0, 204, 255, 1) 100%, rgba(0, 204, 255, 1) 100%);
+                            color: #333;
+                            outline: none;
+                        }
+                    }
+                }
+            }
+            .post-btn {
+                width: 165px;
+                height: 40px;
+                border: 1px solid #00ccff;
+                background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(0, 204, 255, 1) 100%, rgba(0, 204, 255, 1) 100%);
+                color: #333;
+                outline: none;
             }
         }
     }
