--- a/src/css/vrpublish.less
+++ b/src/css/vrpublish.less
@@ -34,6 +34,15 @@
             z-index: 2;
             cursor: pointer;
         }
+        select {
+            border: 2px solid #00ccff;
+            outline: none;
+            height: 39px;
+            border-radius: 12px;
+            display: inline-block;
+            margin-left: 10px;
+            padding-left: 10px;
+        }
         .file-btn {
             border: 2px solid #00ccff;
             outline: none;
