--- a/src/css/vrModel.less
+++ b/src/css/vrModel.less
@@ -14,7 +14,7 @@
         .model-box {
             display: inline-block;
             width: 588px;
-            min-height: 400px;
+            height: 300px;
             overflow: hidden;
             .home-img {
                 width: 100%;
@@ -71,6 +71,7 @@
         }
         .text-detail {
             width: 100%;
+            margin-top: 40px;
             .header {
                 width: 100%;
                 height: 61px;
