--- a/src/css/vrModel.less
+++ b/src/css/vrModel.less
@@ -1,6 +1,6 @@
 .content {
-    width: 1138px;
-    margin-left: 62px;
+    width: 1000px;
+    margin: 0;
     min-height: 600px;
     .title {
         font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
@@ -13,7 +13,7 @@
         margin-top: 20px;
         .model-box {
             display: inline-block;
-            width: 588px;
+            width: 520px;
             height: 300px;
             overflow: hidden;
             .home-img {
@@ -23,7 +23,7 @@
         .model-detail {
             display: inline-block;
             vertical-align: top;
-            width: 520px;
+            width: 460px;
             margin-left: 20px;
             .download-btn {
                 width: 237px;
