--- a/src/css/vrModel.css
+++ b/src/css/vrModel.css
@@ -1,6 +1,6 @@
 .content {
-  width: 1138px;
-  margin-left: 62px;
+  width: 1000px;
+  margin: 0;
   min-height: 600px;
 }
 .content .title {
@@ -15,7 +15,7 @@
 }
 .content .detail .model-box {
   display: inline-block;
-  width: 588px;
+  width: 520px;
   height: 300px;
   overflow: hidden;
 }
@@ -25,7 +25,7 @@
 .content .detail .model-detail {
   display: inline-block;
   vertical-align: top;
-  width: 520px;
+  width: 460px;
   margin-left: 20px;
 }
 .content .detail .model-detail .download-btn {
