--- a/src/css/classifylist.less
+++ b/src/css/classifylist.less
@@ -1,43 +1,42 @@
-.header {
-    width: 1136px;
-    background: #fafafa;
-    padding: 10px 0;
-    margin-left: 62px;
-    p {
-        font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
-        font-weight: 700;
-        font-style: normal;
-        color: #999;
-        font-size: 14px;
-        .vr-name {
-            color: #FFCC00;
-        }
-        span {
-            display: inline-block;
-        }
-        span {
-            margin-left: 20px;
-        }
-    }
-    .list-type {
-        span {
-            cursor: pointer;
-        }
-        span:hover {
-            color: #FFCC00;
-        }
-        .active {
-            color: #FFCC00;
-        }
-    }
-}
-
 .content {
-    background: #fafafa;
     margin: 30px 62px;
     width: 1106px;
+    .header {
+        width: 1136px;
+        background: #fafafa;
+        padding: 10px 0;
+        p {
+            font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
+            font-weight: 700;
+            font-style: normal;
+            color: #999;
+            font-size: 14px;
+            .vr-name {
+                color: #FFCC00;
+            }
+            span {
+                display: inline-block;
+            }
+            span {
+                margin-left: 20px;
+            }
+        }
+        .list-type {
+            span {
+                cursor: pointer;
+            }
+            span:hover {
+                color: #FFCC00;
+            }
+            .active {
+                color: #FFCC00;
+            }
+        }
+    }
     .vr-list {
         padding: 10px 0;
+        background: #fafafa;
+        margin-top: 30px;
         .vr-box {
             border: 1px solid #d7d7d7;
             margin: 0 10px 20px 10px;
@@ -95,6 +94,7 @@
     font-style: normal;
     color: #999;
     font-size: 14px;
+    margin-top: 30px;
     .page-detail {
         display: inline-block;
         border: 1px solid #ddd;
