--- a/src/css/modelManagement.less
+++ b/src/css/modelManagement.less
@@ -5,6 +5,9 @@
             tr {
                 td {
                     vertical-align: middle;
+                    img {
+                        width: 50px;
+                    }
                 }
             }
         }
