--- a/src/css/vrpublish.less
+++ b/src/css/vrpublish.less
@@ -101,6 +101,9 @@
                             vertical-align: middle;
                             cursor: pointer;
                         }
+                        img {
+                            width: 200px;
+                        }
                         .btn {
                             margin-left: 50px;
                             width: 60px;
