--- a/src/css/vrModelpublish.less
+++ b/src/css/vrModelpublish.less
@@ -106,6 +106,7 @@
                             display: inline-block;
                             margin-right: 50px;
                         }
+                        width: 200px;
                         .group {
                             height: 16px;
                             vertical-align: middle;
