--- a/src/css/vrpublish.css
+++ b/src/css/vrpublish.css
@@ -105,6 +105,9 @@
   vertical-align: middle;
   cursor: pointer;
 }
+.content #publish .row .img-list ul li img {
+  width: 200px;
+}
 .content #publish .row .img-list ul li .btn {
   margin-left: 50px;
   width: 60px;
