--- a/src/css/classifylist.less
+++ b/src/css/classifylist.less
@@ -58,6 +58,11 @@
                 font-style: normal;
                 font-size: 15px;
                 color: #999;
+                .price {
+                    float: right;
+                    margin-right: 5px;
+                    color: #337ab7;
+                }
             }
             .id-box {
                 display: inline-block;
