--- a/src/css/newPassword.css
+++ b/src/css/newPassword.css
@@ -97,6 +97,13 @@
   font-size: 20px;
   color: #FFCC33;
 }
+.content .step p a {
+  display: inline-block;
+  outline: none;
+  font-size: 20px;
+  color: #FFCC33;
+  margin-left: 20px;
+}
 .content .step-0 {
   display: block;
 }
