--- a/src/css/newPassword.less
+++ b/src/css/newPassword.less
@@ -94,9 +94,16 @@
         }
         p {
             text-align: center;
-            margin: 20px auto; 
+            margin: 20px auto;
             font-size: 20px;
             color: #FFCC33;
+            a {
+                display: inline-block;
+                outline: none;
+                font-size: 20px;
+                color: #FFCC33;
+                margin-left: 20px
+            }
         }
     }
     .step-0 {
