--- a/src/css/register.css
+++ b/src/css/register.css
@@ -1,22 +1,21 @@
-.register-box {
-  margin-left: 32px;
-}
-.register-box label {
-  margin: 0;
-}
-.register-box .register-header {
-  width: 1198px;
+.full-header {
+  width: 100%;
   height: 72px;
   background: linear-gradient(180deg, #0099ff 0%, #0099ff 0%, #0099ff 45%, #ffffff 100%, #ffffff 100%);
 }
-.register-box .register-header .logo {
+.full-header .register-header {
+  width: 1198px;
+  height: 72px;
+  margin: 0 auto;
+}
+.full-header .register-header .logo {
   width: 123px;
   height: 62px;
   display: inline-block;
   vertical-align: top;
 }
-.register-box .register-header p {
-  font-family: '华文行楷';
+.full-header .register-header p {
+  font-family: "华文行楷";
   display: inline-block;
   color: #fff;
   text-rendering: optimizeLegibility;
@@ -24,17 +23,23 @@
   line-height: 72px;
   margin-bottom: 0;
 }
-.register-box .register-header .to-index {
+.full-header .register-header .to-index {
   float: right;
   margin-right: 20px;
   margin-top: 30px;
 }
-.register-box .register-header a {
-  color: #FFCC33;
+.full-header .register-header a {
+  color: #ffcc33;
   text-decoration: none;
 }
-.register-box .register-header a :hover {
+.full-header .register-header a :hover {
   color: #000;
+}
+.register-box {
+  margin-left: 32px;
+}
+.register-box label {
+  margin: 0;
 }
 .register-box .registerPage-header {
   width: 900px;
@@ -63,11 +68,11 @@
   margin-top: 10px;
 }
 .register-box .registerPage-header .box span {
-  color: #FFCC33;
+  color: #ffcc33;
 }
 .register-box .registerPage-header .box a {
   text-decoration: none;
-  color: #FFCC33;
+  color: #ffcc33;
 }
 .register-box .registerPage-header .box a:hover {
   color: #00ccff;
