--- a/src/css/register.less
+++ b/src/css/register.less
@@ -1,176 +1,214 @@
+.full-header {
+  width: 100%;
+  height: 72px;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 153, 255, 1) 0%,
+    rgba(0, 153, 255, 1) 0%,
+    rgba(0, 153, 255, 1) 45%,
+    rgba(255, 255, 255, 1) 100%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  .register-header {
+    width: 1198px;
+    height: 72px;
+    margin: 0 auto;
+    .logo {
+      width: 123px;
+      height: 62px;
+      display: inline-block;
+      vertical-align: top;
+    }
+    p {
+      font-family: "华文行楷";
+      display: inline-block;
+      color: #fff;
+      text-rendering: optimizeLegibility;
+      text-shadow: 3px 3px 10px rgba(102, 102, 102, 0.6);
+      line-height: 72px;
+      margin-bottom: 0;
+    }
+    .to-index {
+      float: right;
+      margin-right: 20px;
+      margin-top: 30px;
+    }
+    a {
+      color: #ffcc33;
+      text-decoration: none;
+    }
+    a :hover {
+      color: #000;
+    }
+  }
+}
+
 .register-box {
-    margin-left: 32px;
-    label {
+  margin-left: 32px;
+  label {
+    margin: 0;
+  }
+  .registerPage-header {
+    width: 900px;
+    height: 70px;
+    padding: 30px 0 0 30px;
+    margin-left: 99px;
+    .btn {
+      font-size: 15px;
+      outline: none;
+      height: 40px;
+      width: 140px;
+      border-radius: 0;
+      border-top-left-radius: 19px;
+      border-top-right-radius: 19px;
+      border-color: #00ccff;
+      background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(0, 204, 255, 1) 100%,
+        rgba(0, 204, 255, 1) 100%
+      );
+    }
+    .btn:hover {
+      color: #fff;
+      background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(0, 0, 255, 1) 100%,
+        rgba(0, 0, 255, 1) 100%
+      );
+    }
+    .box {
+      float: right;
+      margin-right: 35px;
+      margin-top: 10px;
+      span {
+        color: #ffcc33;
+      }
+      a {
+        text-decoration: none;
+        color: #ffcc33;
+      }
+      a:hover {
+        color: rgb(0, 204, 255);
+      }
+    }
+  }
+  .content {
+    width: 900px;
+    min-height: 492px;
+    border: 1px solid #17c1fe;
+    margin-left: 99px;
+    .content-header {
+      height: 62px;
+      background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(109, 145, 248, 0.2) 100%,
+        rgba(109, 145, 248, 0.2) 100%
+      );
+      p {
+        color: #999;
         margin: 0;
+        line-height: 62px;
+      }
     }
-    .register-header {
-        width: 1198px;
-        height: 72px;
-        background: linear-gradient(180deg, rgba(0, 153, 255, 1) 0%, rgba(0, 153, 255, 1) 0%, rgba(0, 153, 255, 1) 45%, rgba(255, 255, 255, 1) 100%, rgba(255, 255, 255, 1) 100%);
-        .logo {
-            width: 123px;
-            height: 62px;
-            display: inline-block;
-            vertical-align: top;
-        }
-        p {
-            font-family: '华文行楷';
-            display: inline-block;
-            color: #fff;
-            text-rendering: optimizeLegibility;
-            text-shadow: 3px 3px 10px rgba(102, 102, 102, 0.6);
-            line-height: 72px;
-            margin-bottom: 0;
-        }
-        .to-index {
-            float: right;
-            margin-right: 20px;
-            margin-top: 30px;
-        }
-        a {
-            color: #FFCC33;
-            text-decoration: none;
-        }
-        a :hover {
-            color: #000;
-        }
-    }
-    .registerPage-header {
-        width: 900px;
-        height: 70px;
-        padding: 30px 0 0 30px;
-        margin-left: 99px;
-        .btn {
-            font-size: 15px;
-            outline: none;
-            height: 40px;
-            width: 140px;
-            border-radius: 0;
-            border-top-left-radius: 19px;
-            border-top-right-radius: 19px;
-            border-color: #00ccff;
-            background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(0, 204, 255, 1) 100%, rgba(0, 204, 255, 1) 100%);
-        }
-        .btn:hover {
-            color: #fff;
-            background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(0, 0, 255, 1) 100%, rgba(0, 0, 255, 1) 100%);
-        }
-        .box {
-            float: right;
-            margin-right: 35px;
-            margin-top: 10px;
-            span {
-                color: #FFCC33;
-            }
-            a {
-                text-decoration: none;
-                color: #FFCC33;
-            }
-            a:hover {
-                color: rgb(0, 204, 255);
-            }
-        }
-    }
-    .content {
-        width: 900px;
-        min-height: 492px;
-        border: 1px solid #17c1fe;
-        margin-left: 99px;
-        .content-header {
-            height: 62px;
-            background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(109, 145, 248, .2) 100%, rgba(109, 145, 248, .2) 100%);
-            p {
-                color: #999;
-                margin: 0;
-                line-height: 62px;
-            }
-        }
-        li {
-            margin-top: 10px;
-            margin-left: 190px;
-            span {
-                display: inline-block;
-                vertical-align: top;
-                line-height: 35px;
-            }
-            .label {
-                width: 60px;
-                color: #33d6ff;
-                padding: 0;
-            }
-            .input-box {
-                display: inline-block;
-                min-height: 65px;
-                input {
-                    width: 433px;
-                    height: 35px;
-                    border: 2px solid #33d6ff;
-                    border-radius: 10px;
-                    outline: none;
-                    margin-left: 15px;
-                    padding: 0 20px;
-                }
-                label {
-                    margin-left: 35px;
-                    line-height: 30px;
-                    color: red;
-                }
-            }
-            .radio-box {
-                display: inline-block;
-                width: 447px;
-                height: 39px;
-                padding-left: 20px;
-                input {
-                    line-height: 39px;
-                    outline: none;
-                }
-                #group {
-                    margin-left: 20px;
-                }
-                label {
-                    line-height: 39px;
-                    color: #999;
-                    cursor: pointer;
-                }
-            }
-        }
-        .group-li {
-            display: none;
-        }
-        .content-member {
-            margin-top: 20px;
-        }
-        .content-developer {
-            margin-top: 20px;
-            display: none;
-        }
-    }
-    .post-box {
-        text-align: center;
-        margin: 15px 0 30px 0;
-        .post-btn {
-            outline: none;
-            border-color: #0099ff;
-            width: 342px;
-            height: 40px;
-            background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(0, 204, 255, 1) 100%, rgba(0, 204, 255, 1) 100%);
-        }
+    li {
+      margin-top: 10px;
+      margin-left: 190px;
+      span {
+        display: inline-block;
+        vertical-align: top;
+        line-height: 35px;
+      }
+      .label {
+        width: 60px;
+        color: #33d6ff;
+        padding: 0;
+      }
+      .input-box {
+        display: inline-block;
+        min-height: 65px;
         input {
-            margin-left: 15px;
-            line-height: 40px;
-            cursor: pointer;
+          width: 433px;
+          height: 35px;
+          border: 2px solid #33d6ff;
+          border-radius: 10px;
+          outline: none;
+          margin-left: 15px;
+          padding: 0 20px;
         }
         label {
-            color: #333;
-            line-height: 40px;
-            cursor: pointer;
-            margin-left: 5px;
+          margin-left: 35px;
+          line-height: 30px;
+          color: red;
         }
+      }
+      .radio-box {
+        display: inline-block;
+        width: 447px;
+        height: 39px;
+        padding-left: 20px;
+        input {
+          line-height: 39px;
+          outline: none;
+        }
+        #group {
+          margin-left: 20px;
+        }
+        label {
+          line-height: 39px;
+          color: #999;
+          cursor: pointer;
+        }
+      }
     }
+    .group-li {
+      display: none;
+    }
+    .content-member {
+      margin-top: 20px;
+    }
+    .content-developer {
+      margin-top: 20px;
+      display: none;
+    }
+  }
+  .post-box {
+    text-align: center;
+    margin: 15px 0 30px 0;
+    .post-btn {
+      outline: none;
+      border-color: #0099ff;
+      width: 342px;
+      height: 40px;
+      background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(0, 204, 255, 1) 100%,
+        rgba(0, 204, 255, 1) 100%
+      );
+    }
+    input {
+      margin-left: 15px;
+      line-height: 40px;
+      cursor: pointer;
+    }
+    label {
+      color: #333;
+      line-height: 40px;
+      cursor: pointer;
+      margin-left: 5px;
+    }
+  }
 }
+
 .text {
-    p {
-        text-indent:2em; 
-    }
+  p {
+    text-indent: 2em;
+  }
 }
