--- a/src/css/recharge.less
+++ b/src/css/recharge.less
@@ -29,4 +29,22 @@
         margin-top: 30px;
         margin-left: 30px;
     }
+    .remodal, .remodal-wrapper:after {
+        vertical-align: top;
+    }
+}
+.je-text {
+    display: inline-block;
+    font-size: 20px;
+    margin: 0 0 0 30px;
+    line-height: 50px;
+    vertical-align: middle;
+}
+.wechat-pay {
+    height: 50px;
+}
+.wechat-desc {
+    display: block;
+    width: 200px;
+    margin: 0 auto;
 }
